--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#resume">Resume</a>
             <a href="#contactus">Contact Us</a>
         </div>
+        </div>
 
         <img src="https://wallpaperaccess.com/full/1111980.jpg" alt="not found">
         <div class="intro">Hey! I'm Gopal Chalak </div>
@@ -30,7 +31,7 @@
             </ul>
         </div>
 
-    </div>
+    <!-- </div> -->
 
 
     <div id="about">
@@ -128,7 +129,7 @@
         </div>
   
         <div class="icons">
-          <h1>Contact Me</h1>
+          <h1 id="contactus">Contact Me</h1>
           <img id="media"   src="https://th.bing.com/th?id=OIP.y31er6dzhxFNV45Eqc_CtwHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2">
 
           <a href="https://whatsapp.com/dl/"><img  id="media" src="https://th.bing.com/th/id/OIP.JLXFMx03N6tpstTmMbNVlgHaHa?pid=ImgDet&rs=1"></a>
