--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="home">
 
         <div class="topnav">
-            <a class="active" href="new.html">Home</a>
+            <a class="active" href="index.css">Home</a>
             <a href="#about" , onclick="scroll(0, 100)">About</a>
             <a href="#resume">Resume</a>
             <a href="#contactus">Contact Us</a>
@@ -104,8 +104,8 @@
 
 
        <div class="resumeheading"><h3>Download Resume</h3></div>
-<a href="https://google.com/"> <button class="btn"><i class="fa fa-download">
-</i> Download resume</button></a>
+<a href="https://drive.google.com/file/d/1FuJwd8f5sGAW0GgQj0719nIa24-Z0_cS/view?usp=drive_link"> <button class="btn"><i class="fa fa-download">
+</i> Download Resume</button></a>
 
     </div>
 
@@ -130,9 +130,10 @@
   
         <div class="icons">
           <h1 id="contactus">Contact Me</h1>
-          <img id="media"   src="https://th.bing.com/th?id=OIP.y31er6dzhxFNV45Eqc_CtwHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2">
+          <a href="tel:url(+91876646)">  <img id="media"   src="https://th.bing.com/th?id=OIP.y31er6dzhxFNV45Eqc_CtwHaHa&w=250&h=250&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2">
+          </a>
 
-          <a href="https://whatsapp.com/dl/"><img  id="media" src="https://th.bing.com/th/id/OIP.JLXFMx03N6tpstTmMbNVlgHaHa?pid=ImgDet&rs=1"></a>
+          <a href="https://wa.me/+918766467144"><img  id="media" src="https://th.bing.com/th/id/OIP.JLXFMx03N6tpstTmMbNVlgHaHa?pid=ImgDet&rs=1"></a>
 
           <a href="mailto:gopalchalak75@gmail.com"><img   id="media" src="https://th.bing.com/th/id/OIP.ZYBoGvR_bfdiAQLZZpVHQAHaFj?pid=ImgDet&rs=1"></a>
           
